--- a/src/index.njk
+++ b/src/index.njk
@@ -14,6 +14,8 @@ showCta: true
   </div>
 </section>
 
+<div class="star-divider"><img src="/images/star2.svg" alt=""></div>
+
 <section class="section">
   <div class="container">
     <div class="split">
@@ -94,6 +96,8 @@ showCta: true
     </div>
   </div>
 </section>
+
+<div class="star-divider"><img src="/images/star2.svg" alt=""></div>
 
 <section class="section">
   <div class="container">
